force-app/main/default/objects/SubscriptionCollection__x/SubscriptionCollection__x.object-meta.xml
<CustomObject>
    <description>SubscriptionCollection</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SubscriptionCollection</externalName>
    <label>SubscriptionCollection</label>
    <pluralLabel>SubscriptionCollection</pluralLabel>
</CustomObject>