force-app/main/default/objects/SubscriptionCollection__x/fields/changeType__c.field-meta.xml
<CustomField>
    <fullName>changeType__c</fullName>
    <description>changeType</description>
    <externalDeveloperName>changeType</externalDeveloperName>
    <label>changeType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>