force-app/main/default/objects/SubscriptionCollection__x/fields/collection__c.field-meta.xml
<CustomField>
    <fullName>collection__c</fullName>
    <description>collection</description>
    <externalDeveloperName>collection</externalDeveloperName>
    <label>collection</label>
    <length>40</length>
    <type>Text</type>
</CustomField>