force-app/main/default/objects/SubscriptionCollection__x/fields/deliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>deliveryAddress__c</fullName>
    <description>deliveryAddress</description>
    <externalDeveloperName>deliveryAddress</externalDeveloperName>
    <label>deliveryAddress</label>
    <length>128</length>
    <type>Text</type>
</CustomField>