force-app/main/default/objects/SubscriptionCollection__x/fields/filter__c.field-meta.xml
<CustomField>
    <fullName>filter__c</fullName>
    <description>filter</description>
    <externalDeveloperName>filter</externalDeveloperName>
    <label>filter</label>
    <length>128</length>
    <type>Text</type>
</CustomField>