force-app/main/default/objects/SubscriptionCollection__x/fields/persistNotifications__c.field-meta.xml
<CustomField>
    <fullName>persistNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>persistNotifications</description>
    <externalDeveloperName>persistNotifications</externalDeveloperName>
    <label>persistNotifications</label>
    <type>Checkbox</type>
</CustomField>