force-app/main/default/objects/SubscriptionCollection__x/fields/select__c.field-meta.xml
<CustomField>
    <fullName>select__c</fullName>
    <description>select</description>
    <externalDeveloperName>select</externalDeveloperName>
    <label>select</label>
    <length>255</length>
    <type>Text</type>
</CustomField>