force-app/main/default/objects/SubscriptionCollection__x/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <description>title</description>
    <externalDeveloperName>title</externalDeveloperName>
    <label>title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>