force-app/main/default/objects/SubscriptionCollection__x/fields/updated__c.field-meta.xml
<CustomField>
    <fullName>updated__c</fullName>
    <description>updated</description>
    <externalDeveloperName>updated</externalDeveloperName>
    <label>updated</label>
    <type>DateTime</type>
</CustomField>