force-app/main/default/objects/SubscriptionCollection__x/fields/user__c.field-meta.xml
<CustomField>
    <fullName>user__c</fullName>
    <description>user</description>
    <externalDeveloperName>user</externalDeveloperName>
    <label>user</label>
    <length>12</length>
    <type>Text</type>
</CustomField>